[package]
name = "geezer-slots"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
standard-dist = "1.0.0"
tracing = { version = "0.1.31", features = ["valuable"] }
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"] }
tracing-subscriber = "0.3.9"
sled = { version = "0.34.7", features = [ "compression" ] }
rand = "*"
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "macros", "time" ] }
rust-s3 = "0.30.0"
lazy_static = "1.4.0"
zip = { version = "0.6.0", default-features = false, features = [ "deflate", "time" ] }
walkdir = "2.3.2"